# offload

./: README.md
backend/: .gitignore  crawl.py  crawler_driver.py  database.py  docs.jsonl  example.py  ingest.py  llm.py  main.py  models.py  new-crawl.py  pyproject.toml  requirements.txt  schemas.py  test.py  test_stream.py
backend/alembic/: env.py
backend/alembic/versions/: 983e221bb6b7_tables.py  d090adc98a48_first.py
backend/scrapy_crawler/scrapy_crawler/: crawler.py  settings.py
backend/scrapy_crawler/scrapy_crawler/spiders/: docs_spider.py
doc-expert/: openapi.json  orval.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
doc-expert/@/components/: chat-message.tsx  chat.tsx  command-modal.tsx  prompt-form.tsx
doc-expert/@/components/ui/: button.tsx  dialog.tsx
doc-expert/src/: content.tsx  popup.tsx
doc-expert/src/api/: client.ts  openapi.json
doc-expert/src/api/openapi/chat/: chat.ts
doc-expert/src/api/openapi/code/: code.ts
doc-expert/src/api/openapi/items/: items.ts
doc-expert/src/api/openapi/root/: root.ts
doc-expert/src/api/openapi/schemas/: chatInSchema.ts  chatMessageSchema.ts  chatResponse.ts  chatResponseSourceMetadata.ts  codeGetFileParams.ts  docsInfo.ts  docsUploadOutSchema.ts  getSourceRequest.ts  getSourceResponse.ts  hTTPValidationError.ts  index.ts  itemsReadItemParams.ts  uploadUploadCodeParams.ts  validationError.ts  validationErrorLocItem.ts
doc-expert/src/api/openapi/source/: source.ts
doc-expert/src/api/openapi/upload/: upload.ts
