[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rashad Philizaire <rashadphilizaire@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "main:start"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.0.229"
langchainplus-sdk = "0.0.20"
pydantic-core = "2.1.2"
pydantic = "1.10.9"
celery = "^5.3.5"
fastapi = "^0.104.1"
pinecone-client = "^2.2.4"
scrapy = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
